@@ -341,6 +341,22 @@ struct ctx_t *ctx_get_zombie(struct ctx_t *parent, int pid)
 }
 
 
+/* If the context is suspended in a blocking host system call,
+ * cancel the host thread 'ke_process_suspended_thread' associated with it
+ * and schedule a call to 'ke_process_suspended'. */
+void ctx_process_suspended_thread_cancel(struct ctx_t *ctx)
+{
+	pthread_mutex_lock(&ke->process_suspended_mutex);
+	if (ctx->process_suspended_thread_active) {
+		if (pthread_cancel(ctx->process_suspended_thread))
+			fatal("error canceling ke_process_suspended_thread for context %d", ctx->pid);
+		ctx->process_suspended_thread_active = 0;
+		ke->process_suspended_force = 1;
+	}
+	pthread_mutex_unlock(&ke->process_suspended_mutex);
+}
+
+
 /* Finish a context group. This call does a subset of action of the 'ctx_finish'
  * call, but for all parent and child contexts sharing a memory map. */
 void ctx_finish_group(struct ctx_t *ctx, int status)
@@ -361,10 +377,12 @@ void ctx_finish_group(struct ctx_t *ctx, int status)
 	for (aux = ke->context_list_head; aux; aux = aux->context_next) {
 		if (aux->mem != ctx->mem)
 			continue;
+
 		if (ctx_get_status(aux, ctx_zombie))
 			ctx_set_status(aux, ctx_finished);
 		if (ctx_get_status(aux, ctx_handler))
 			signal_handler_return(aux);
+		ctx_process_suspended_thread_cancel(aux);
 		ctx_set_status(aux, ctx_finished);
 		aux->exit_code = status;
 	}
@@ -383,8 +401,12 @@ void ctx_finish(struct ctx_t *ctx, int status)
 	/* Context already finished */
 	if (ctx_get_status(ctx, ctx_finished | ctx_zombie))
 		return;
+	
+	/* Cancel associated 'ke_process_suspended_thread' if context is
+	 * suspended in a blocking system call. */
+	ctx_process_suspended_thread_cancel(ctx);
 
-	/* From now on, all children have lost their parent. If a children is
+	/* From now on, all children have lost their parent. If a child is
 	 * already zombie, finish it, since its parent won't be able to waitpid it
 	 * anymore. */
 	for (aux = ke->context_list_head; aux; aux = aux->context_next) {
